cpp_module_00/ex01/log/tidy.log
/root/cpp_module/cpp_module_00/ex01/src/Contact.cpp:1:10: error: 'Contact.hpp' file not found [clang-diagnostic-error]
#include "Contact.hpp"
         ^~~~~~~~~~~~~
/root/cpp_module/cpp_module_00/ex01/src/PhoneBook.cpp:1:10: error: 'PhoneBook.hpp' file not found [clang-diagnostic-error]
#include "PhoneBook.hpp"
         ^~~~~~~~~~~~~~~
/root/cpp_module/cpp_module_00/ex01/src/main.cpp:4:10: error: 'PhoneBook.hpp' file not found [clang-diagnostic-error]
#include "PhoneBook.hpp"
         ^~~~~~~~~~~~~~~
/root/cpp_module/cpp_module_00/ex01/src/Contact.cpp:1:10: error: 'Contact.hpp' file not found [clang-diagnostic-error]
#include "Contact.hpp"
         ^~~~~~~~~~~~~
/root/cpp_module/cpp_module_00/ex01/src/PhoneBook.cpp:1:10: error: 'PhoneBook.hpp' file not found [clang-diagnostic-error]
#include "PhoneBook.hpp"
         ^~~~~~~~~~~~~~~
/root/cpp_module/cpp_module_00/ex01/src/main.cpp:4:10: error: 'PhoneBook.hpp' file not found [clang-diagnostic-error]
#include "PhoneBook.hpp"
         ^~~~~~~~~~~~~~~
